WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273099
ASSERT while clearing ASTC textures for copy
https://bugs.webkit.org/show_bug.cgi?id=273099
Summary
ASSERT while clearing ASTC textures for copy
Kimmo Kinnunen
Reported
2024-04-22 18:40:45 PDT
ASSERT while clearing ASTC textures for copy
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-22 18:40:55 PDT
<
rdar://problem/126894196
>
Kimmo Kinnunen
Comment 2
2024-04-22 19:21:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27610
EWS
Comment 3
2024-04-25 14:52:11 PDT
Committed
278006@main
(71bd202cfeb4): <
https://commits.webkit.org/278006@main
> Reviewed commits have been landed. Closing PR #27610 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug