ASSERT while clearing ASTC textures for copy https://bugs.webkit.org/show_bug.cgi?id=273099 rdar://126894196

Reviewed by Mike Wyrzykowski.

Textures would be cleared with blit from empty texture. The blit size
would be calculated from logical texture size. This is incorrect for
cases where compressed texture mipmap levels != 1 would be used, since
their logical sizes might not be block aligned. The physical sizes
would need to be used.

Use correct function WTF::roundUpToMultipleOfNonPowerOfTwo().

* LayoutTests/fast/webgpu/copy-texture-to-texture-astc-mipmap-dimensions-crash-expected.txt: Added.
* LayoutTests/fast/webgpu/copy-texture-to-texture-astc-mipmap-dimensions-crash.html: Added.
* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::clearTextureIfNeeded):
* Source/WebGPU/WebGPU/Texture.h:
* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::Texture::bytesPerRow):
(WebGPU::Texture::physicalMiplevelSpecificTextureExtent):
(WebGPU::Texture::physicalTextureExtent):

Canonical link: https://commits.webkit.org/278006@main